Added support and example for directory-based searching

--- a/example/sqlite/example.conf
+++ b/example/sqlite/example.conf
@@ -1,4 +1,4 @@
-sqlite:///C:/wksp/snippy/example/example_data
+sqlite:///C:/wksp/snippy/example/sqlite/example_data.db
 data
 C:/wksp/snippy/example/regex_file
 note_id
